# qt-template-project

./: .clang-format  .gitignore  CMakeLists.txt  JetBrains_StyleFormat.xml  LICENSE  README.md  conanfile.py  config_win64_debug.bat  config_win64_release.bat  qt_win64_setup_project.bat
.github/: FUNDING.yml
.github/workflows/: cmake-build.yml
CMakeLibs/: AddModuleMacros.cmake  CMakeLists.txt
Profiles/: WinDbg  WinRel  Windows_x64_Debug  macos-latest.conanprofile  ubuntu-latest.conanprofile  windows-latest.conanprofile
Source/: CMakeLists.txt
Source/Application/: CMakeLists.txt
Source/Application/Include/Application/: ApplicationModule.hpp
Source/Application/Resources/: Resources.qrc
Source/Application/Source/: Application.cpp  Main.cpp  MainWindow.qml
Source/Core/: CMakeLists.txt
Source/Core/Application/: CMakeLists.txt
Source/Core/Application/Include/Application/: ApplicationModule.hpp  Main.hpp
Source/Core/Application/Resources/QML/Components/: MainWindow.qml
Source/Core/Application/Source/: Application.cpp
Source/Core/Main/: CMakeLists.txt
Source/Core/Main/Resources/: Resources.qrc
Source/Core/Main/Source/: Main.cpp  Main.qml
Source/Main/: CMakeLists.txt
Source/Main/Source/: Main.cpp
Source/Modules/: CMakeLists.txt
Source/Modules/TemplateLibrary/: CMakeLists.txt
Source/Modules/TemplateLibrary/Include/TemplateLibrary/: TemplateLibrary.hpp  TemplateLibraryModule.hpp
Source/Modules/TemplateLibrary/Source/: TemplateLibrary.cpp
Source/Modules/UserInterface/: CMakeLists.txt
Source/Modules/UserInterface/Include/UserInterface/: UserInterfaceModule.hpp
Source/Modules/UserInterface/Include/UserInterface/Components/: TemplateObject.hpp
Source/Modules/UserInterface/Resources/QML/Pages/: HomePage.qml  LoginPage.qml  PlaceholderPage.qml
Source/Modules/UserInterface/Source/Components/: TemplateObject.cpp
Source/TemplateLibrary/: CMakeLists.txt
Source/TemplateLibrary/Include/TemplateLibrary/: TemplateLibraryModule.hpp
Source/Tests/: CMakeLists.txt
Source/Tests/Benchmark/: CMakeLists.txt
Source/Tests/Benchmark/Include/ApplicationBenchmark/: UserInterface.hpp
Source/Tests/Benchmark/Source/: BenchmarkMain.cpp
Source/Tests/Unit/: CMakeLists.txt
Source/Tests/Unit/Include/ApplicationUnit/: UserInterface.hpp
Source/Tests/Unit/Source/: Main.cpp  UnitMain.cpp
Source/UserInterface/: CMakeLists.txt  MainWindow.qml
Source/UserInterface/Components/: ApplicationShell.qml
Source/UserInterface/Include/UserInterface/: UserInterfaceModule.hpp
Source/UserInterface/Include/UserInterface/Components/: TemplateObject.hpp
Source/UserInterface/Pages/: HomePage.qml  LoginPage.qml  PlaceholderPage.qml
Source/UserInterface/QML/Components/: ApplicationShell.qml
Source/UserInterface/QML/Pages/: HomePage.qml  LoginPage.qml  PlaceholderPage.qml
Source/UserInterface/Resources/: Resources.qrc
Source/UserInterface/Resources/QML/Components/: ApplicationShell.qml
Source/UserInterface/Source/Components/: TemplateObject.cpp
