# Copyright Notices: [...]

# ------------ Project Settings ------------
CMAKE_MINIMUM_REQUIRED(VERSION 3.28)
PROJECT(renderer-QtTemplate VERSION 0.0.1 LANGUAGES CXX)

FIND_PACKAGE(Qt6 REQUIRED COMPONENTS Core)
QT_STANDARD_PROJECT_SETUP(REQUIRES 6.6)

# ----------- Global Definitions -----------
SET(CMAKE_CXX_STANDARD 23)
SET(CMAKE_CXX_STANDARD_REQUIRED ON)
SET(CMAKE_CXX_EXTENSIONS OFF)
SET(CMAKE_CXX_SCAN_FOR_MODULES ON)

IF (UNIX)
    SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -fmodules-ts")
ENDIF (UNIX)

SET(Boost_NO_WARN_NEW_VERSIONS ON)

IF (WIN32)
    ADD_DEFINITIONS(-DBOOST_USE_WINAPI_VERSION=0x0A00)
    ADD_DEFINITIONS(-D_WIN32_WINNT=0x0A00)
ENDIF (WIN32)

SET(CMAKE_AUTOMOC ON)
SET(CMAKE_AUTOUIC ON)
SET(CMAKE_AUTORCC ON)

IF (QT_KNOWN_POLICY_QTP0001)
    QT_POLICY(SET QTP0001 NEW)
ENDIF ()

SET(CMAKE_BINARY_DIR ${CMAKE_BINARY_DIR})

SET(CMAKE_ARCHIVE_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/${CMAKE_BUILD_TYPE}/lib)
SET(CMAKE_LIBRARY_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/${CMAKE_BUILD_TYPE}/lib)
SET(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/${CMAKE_BUILD_TYPE}/bin)

SET(CMAKE_DEBUG_POSTFIX "d")
SET(CMAKE_ARCHIVE_OUTPUT_DIRECTORY_DEBUG ${CMAKE_BINARY_DIR}/Debug/lib)
SET(CMAKE_LIBRARY_OUTPUT_DIRECTORY_DEBUG ${CMAKE_BINARY_DIR}/Debug/lib)
SET(CMAKE_RUNTIME_OUTPUT_DIRECTORY_DEBUG ${CMAKE_BINARY_DIR}/Debug/bin)

SET(CMAKE_RELEASE_POSTFIX "")
SET(CMAKE_ARCHIVE_OUTPUT_DIRECTORY_RELEASE ${CMAKE_BINARY_DIR}/Release/lib)
SET(CMAKE_LIBRARY_OUTPUT_DIRECTORY_RELEASE ${CMAKE_BINARY_DIR}/Release/lib)
SET(CMAKE_RUNTIME_OUTPUT_DIRECTORY_RELEASE ${CMAKE_BINARY_DIR}/Release/bin)

SET(CMAKE_INSTALL_LIBDIR ${CMAKE_BINARY_DIR}/${CMAKE_BUILD_TYPE}/lib)
SET(CMAKE_INSTALL_BINDIR ${CMAKE_BINARY_DIR}/${CMAKE_BUILD_TYPE}/bin)

# -------------- Directories ---------------
ADD_SUBDIRECTORY(Source)