# Copyright Notices: [...]

# ----------- Global Definitions -----------
SET(LIBRARY_NAME Application)

# ------------- Library Setup --------------
FIND_PACKAGE(Qt6 6.6 REQUIRED COMPONENTS Gui Quick)

SET(SOURCE_FILES
        ${CMAKE_CURRENT_SOURCE_DIR}/Source/Main.cpp
)

QT_ADD_EXECUTABLE(${LIBRARY_NAME} ${SOURCE_FILES})

TARGET_LINK_LIBRARIES(${LIBRARY_NAME} PRIVATE
        Qt6::Core
        Qt6::Gui
        Qt6::Quick
        UserInterfaceplugin
)

SET_TARGET_PROPERTIES(${LIBRARY_NAME} PROPERTIES
        MACOSX_BUNDLE_GUI_IDENTIFIER com.example.${LIBRARY_NAME}
        MACOSX_BUNDLE_BUNDLE_VERSION ${PROJECT_VERSION}
        MACOSX_BUNDLE_SHORT_VERSION_STRING ${PROJECT_VERSION_MAJOR}.${PROJECT_VERSION_MINOR}
        MACOSX_BUNDLE TRUE
        WIN32_EXECUTABLE TRUE
)

INSTALL(TARGETS ${LIBRARY_NAME}
        BUNDLE DESTINATION .
        LIBRARY DESTINATION ${CMAKE_INSTALL_LIBDIR}
        RUNTIME DESTINATION ${CMAKE_INSTALL_BINDIR}
)

QT_GENERATE_DEPLOY_APP_SCRIPT(
        TARGET ${LIBRARY_NAME}
        OUTPUT_SCRIPT QT_DEPLOY_SCRIPT
        NO_UNSUPPORTED_PLATFORM_ERROR)
INSTALL(SCRIPT ${QT_DEPLOY_SCRIPT})