# Copyright Notices: [...]

# ----------- Global Definitions -----------
SET(LIBRARY_NAME TemplateLibrary)


# --------- Library Configuration ----------
SET(PRIVATE_MODULES_BASE_DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR}/Source)
SET(PUBLIC_MODULES_BASE_DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR}/Include/${LIBRARY_NAME})

FILE(GLOB_RECURSE PRIVATE_SOURCES "${PRIVATE_MODULES_BASE_DIRECTORY}/*.cpp")
FILE(GLOB_RECURSE PUBLIC_SOURCES "${PUBLIC_MODULES_BASE_DIRECTORY}/*.hpp")


# ------------ Library Setup -------------
ADD_LIBRARY(${LIBRARY_NAME} SHARED ${PRIVATE_SOURCES})

TARGET_COMPILE_DEFINITIONS(${LIBRARY_NAME} PRIVATE BUILD_DLL)
SET_TARGET_PROPERTIES(${LIBRARY_NAME} PROPERTIES LINKER_LANGUAGE CXX)

TARGET_INCLUDE_DIRECTORIES(${LIBRARY_NAME} PUBLIC
        ${PUBLIC_MODULES_BASE_DIRECTORY}/..
)

TARGET_INCLUDE_DIRECTORIES(${LIBRARY_NAME} PRIVATE
        ${PRIVATE_MODULES_BASE_DIRECTORY}
        ${PUBLIC_MODULES_BASE_DIRECTORY}
)