# Copyright Notices: [...]

# ----------- Global Definitions -----------
SET(LIBRARY_NAME UserInterface)

# ------------- Library Setup --------------
SET(PRIVATE_MODULES_BASE_DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR}/Source)
SET(PUBLIC_MODULES_BASE_DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR}/Include/${LIBRARY_NAME})

FILE(GLOB_RECURSE PRIVATE_SOURCES "${PRIVATE_MODULES_BASE_DIRECTORY}/*.cpp")
FILE(GLOB_RECURSE PUBLIC_SOURCES "${PUBLIC_MODULES_BASE_DIRECTORY}/*.hpp")

SET(RESOURCES_BASE_DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR}/Resources)
SET(QML_MODULES_BASE_DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR}/QML)

FILE(GLOB_RECURSE APP_RESOURCES ${CMAKE_CURRENT_SOURCE_DIR} "${RESOURCES_BASE_DIRECTORY}/*.qrc")
FILE(GLOB_RECURSE APP_IMAGES RELATIVE ${CMAKE_CURRENT_SOURCE_DIR} "${RESOURCES_BASE_DIRECTORY}/*.png")
FILE(GLOB_RECURSE QML_MODULES RELATIVE ${CMAKE_CURRENT_SOURCE_DIR} "${QML_MODULES_BASE_DIRECTORY}/*.qml")

# ---------------- Qt Setup ----------------
QT_ADD_QML_MODULE(${LIBRARY_NAME} STATIC
        URI ${LIBRARY_NAME}
        VERSION 1.0
        QML_FILES ${QML_MODULES}
        SOURCES ${PRIVATE_SOURCES} ${PUBLIC_SOURCES} ${APP_RESOURCES}
        RESOURCE_PREFIX /
        RESOURCES ${APP_IMAGES}
)

TARGET_COMPILE_DEFINITIONS(${LIBRARY_NAME} PRIVATE BUILD_DLL)
SET_TARGET_PROPERTIES(${LIBRARY_NAME} PROPERTIES LINKER_LANGUAGE CXX)

FIND_PACKAGE(Qt${QT_VERSION_MAJOR} REQUIRED COMPONENTS Qml Quick QuickControls2)

TARGET_LINK_LIBRARIES(${LIBRARY_NAME} PRIVATE
        Qt${QT_VERSION_MAJOR}::Core
        Qt${QT_VERSION_MAJOR}::Qml
        Qt${QT_VERSION_MAJOR}::QuickControls2

        TemplateLibrary
)

TARGET_INCLUDE_DIRECTORIES(${LIBRARY_NAME} PUBLIC
        ${PUBLIC_MODULES_BASE_DIRECTORY}/..
)

TARGET_INCLUDE_DIRECTORIES(${LIBRARY_NAME} PRIVATE
        ${PRIVATE_MODULES_BASE_DIRECTORY}
        ${PUBLIC_MODULES_BASE_DIRECTORY}
)

# Qt QML source directories
TARGET_INCLUDE_DIRECTORIES(${LIBRARY_NAME} PRIVATE
        ${PUBLIC_MODULES_BASE_DIRECTORY}/Components
        ${PUBLIC_MODULES_BASE_DIRECTORY}/Bindings
)